Use define_memory_constraint on Bm constraint

Given

(insn 144 143 145 21 (set (reg:V2DF 253 [ vect__24.23 ])
        (float_extend:V2DF (vec_select:V2SF (reg:V4SF 254)
                (parallel [
                        (const_int 0 [0])
                        (const_int 1 [0x1])
                    ])))) x.i:10 2440 {sse2_cvtps2pd}
     (nil))

which matches

 [(set (match_operand:V2DF 0 "register_operand" "=v")
        (float_extend:V2DF
          (vec_select:V2SF
            (match_operand:V4SF 1 "vector_operand" "vBm")
            (parallel [(const_int 0) (const_int 1)]))))]

LRA doesn't consider that the Bm constraint is an alternative match for
(reg:V4SF 254) since it isn't a memory constraint.  Change Bm to a
memory constraint fixes this issue.

However documentation says that define_memory_constraint is for MEM
constraints where if they are not satisfied they can be made to satisfy
by forcing the address into a register.  But that is not the case here,
if a MEM is misaligned, no equivalent changes to the XEXP (mem, 0) will
make it aligned.  This restriction shows up in LRA process_alt_operands.
This patch also changes LRA to skip bad MEM.  Although there are no
regressions on x86-64, there could be latent issues.

gcc/

	PR target/69299
	* lra-constraints.c (process_alt_operands): Skip bad memory
	operand.
	* config/i386/constraints.md (Bm): Use define_memory_constraint.

gcc/testsuite/

	PR target/69299
	* gcc.target/i386/pr69299.c: New test.